log
Fri Mar 20 10:22:04 PM UTC 2026: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
 tests:  1|4
total_score: 10/70
ceef71b
Fri Mar 20 10:32:58 PM UTC 2026: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|3
total_score: 20/70
227453d
Fri Mar 20 10:41:57 PM UTC 2026: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:12: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
   65 |       suma += dato;
      |            ^~
32fbe16
Fri Mar 20 10:42:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:15: error: dereferencing ‘void *’ pointer [-Werror]
   63 |    int dato = *(first(L));
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
   63 |    int dato = *(first(L));
      |               ^
exercises.c:64:15: error: comparison between pointer and integer [-Werror]
   64 |    while(dato != NULL){
      |               ^~
cc1: all warnings being treated as errors
47a469b
Fri Mar 20 10:43:06 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:63:15: error: dereferencing ‘void *’ pointer [-Werror]
   63 |    int dato = *(first(L));
      |               ^~~~~~~~~~~
exercises.c:63:15: error: void value not ignored as it ought to be
   63 |    int dato = *(first(L));
      |               ^
cc1: all warnings being treated as errors
338578e
Fri Mar 20 10:46:23 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:65:7: error: expected ‘,’ or ‘;’ before ‘suma’
   65 |       suma += dato;
      |       ^~~~
exercises.c:64:11: error: unused variable ‘dato’ [-Werror=unused-variable]
   64 |       int dato = *((int *) first(L))
      |           ^~~~
cc1: all warnings being treated as errors
677f6fb
Fri Mar 20 10:55:55 PM UTC 2026: 
 exercises.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  3|2
total_score: 30/70
6110dae
Fri Mar 20 11:32:22 PM UTC 2026: 
 exercises.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
Compilation failed
test.c: In function ‘test_elimina_elemento’:
test.c:132:5: error: implicit declaration of function ‘eliminaElementos’; did you mean ‘test_elimina_elemento’? [-Wimplicit-function-declaration]
  132 |     eliminaElementos(L, elem);
      |     ^~~~~~~~~~~~~~~~
      |     test_elimina_elemento
a8ce3e4
Fri Mar 20 11:35:29 PM UTC 2026: 
 exercises.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 20/70
2302a99
Fri Mar 20 11:39:39 PM UTC 2026: 
 exercises.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 30/70
4640bfc
Fri Mar 20 11:45:11 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
6cce5ba
Sun Mar 22 04:36:00 AM UTC 2026: 
 exercises.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:126:27: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Wint-conversion]
  126 |          push(pila, cadena[i]);
      |                     ~~~~~~^~~
      |                           |
      |                           char
In file included from exercises.c:7:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
exercises.c:130:27: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                           ^~
exercises.c:130:69: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                                     ^~
exercises.c:130:110: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                                                                              ^~
exercises.c:130:76: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
exercises.c:130:137: error: expected ‘)’ before ‘{’ token
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                          ~                                                                              ^
      |                                                                                                                                         )
exercises.c:135:14: error: expected ‘)’ before ‘}’ token
  135 |             }
      |              ^
      |              )
  136 |          }
      |          ~    
exercises.c:130:15: note: to match this ‘(’
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |               ^
exercises.c:136:10: error: expected expression before ‘}’ token
  136 |          }
      |          ^
cc1: all warnings being treated as errors
e896a93
Sun Mar 22 04:38:44 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:130:27: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                           ^~
exercises.c:130:69: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                                     ^~
exercises.c:130:110: error: comparison between pointer and integer [-Werror]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                                                                              ^~
exercises.c:130:76: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                           ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~
exercises.c:130:137: error: expected ‘)’ before ‘{’ token
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |                                                          ~                                                                              ^
      |                                                                                                                                         )
exercises.c:135:14: error: expected ‘)’ before ‘}’ token
  135 |             }
      |              ^
      |              )
  136 |          }
      |          ~    
exercises.c:130:15: note: to match this ‘(’
  130 |             if((top(pila) == '(' && cadena[i] == ')') || (top(pila) == '{' && cadena[i] == '}' || (top(pila) == '[' && cadena[i] == ']'){
      |               ^
exercises.c:136:10: error: expected expression before ‘}’ token
  136 |          }
      |          ^
cc1: all warnings being treated as errors
354c49e
